<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".constituency.ConstituencyActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--category layout-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cat_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/cat_tittle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/bell_mt"
                    android:text="@string/category"
                    android:textColor="@color/my_blue_color"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/guideline2"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/cat_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textColor="@color/my_blue_color"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/cat_tittle"
                    app:layout_constraintTop_toBottomOf="@id/cat_tittle" />


                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.05" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/constituency_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:scrollbarSize="0dp"
                    android:scrollbars="horizontal"
                    app:layout_constraintStart_toEndOf="@id/guideline2"
                    app:layout_constraintTop_toBottomOf="@id/cat_date">

                </androidx.recyclerview.widget.RecyclerView>

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@id/constituency_recycler_view" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <!--main body for shepherds-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@id/cat_layout">

                <TextView
                    android:id="@+id/tv_bacenta_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bell_mt"
                    android:text="@string/bacentas"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/guideline3"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.05" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/bacenta_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintStart_toStartOf="@id/guideline3"
                    app:layout_constraintTop_toBottomOf="@id/tv_bacenta_title" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_const_overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/my_other_blue_color"
        android:onClick="fabOnClick"
        android:src="@drawable/ic_baseline_add"
        app:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>